--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     <header>
         <div class="header-content">
             <h2>INNOVATORS : DEHADO CHALLENGE 2025</h2>
-            <p class="tagline">Advanced OCR solution combining YOLOv8 for text detection and TrOCR for recognition</p>
+            <p class="tagline">Document Digitization Using YOLOv8 and Attention-Based TrOCR </p>
             <div>
                 <a href="https://drive.google.com/drive/folders/1rlHABRXYAWmegAOlLAFLDe8k649JE5Bg?usp=sharing" class="btn" target="_blank">
                     <i class="fas fa-download"></i> Download Models
@@ -439,9 +439,8 @@
 
     <footer>
         <div class="container">
-            <h2>Document Digitization System</h2>
-            <p class="footer-text">Advanced OCR solution for the DeHaDo-AI Challenge</p>
-            <p class="footer-text">© 2023 Innovators Team. All rights reserved.</p>
+            <h2>Document Digitization Using YOLOv8 and Attention-Based TrOCR </h2>
+            <p class="footer-text">© 2025 Innovators Team. All rights reserved.</p>
         </div>
     </footer>
 </body>
